# TheGooseForceOAuth

./: .gitignore  README.md  extension.json  pyproject.toml  run.py
src/thegooseforce/: __main__.py  login_handler.py  salesforce.py  server.py
